# sledge

./: .gitignore  LICENSE  README.md  index.html  robots.txt  search.json  setup.cfg  sitemap.txt  sledge.html
.github/: deploy-gh-pages.sh
.github/workflows/: gh-pages.yml  python-publish.yml
src/sledge/: __init__.py  __init__.py.bak
tests/: main.py
