[metadata]
name = sledge
version = 0.1.4
author = Douglas Aquino, Filipe Verri
author_email = douglasaquino.ee@gmail.com, filipeverri@gmail.com
description = SLEDge: semantic evaluation of clustering results
long_description = file: README.md
long_description_content_type = text/markdown
url = https://verri.github.io/sledge
project_urls =
    Bug Tracker = https://github.com/verri/sledge/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    pandas
    numpy

[options.packages.find]
where = src
